# rust-tetris

./: .gitignore  Cargo.toml  ENHANCED_SCORING_COMPLETE.md  GAME_DESIGN.md  PHASE1_PLAN.md  README.md  RUST_LEARNING_GUIDE.md  test_floating_bug_fix.md  tetris_leaderboard.json  tetris_save.json  tetris_settings.json
docs/: SCORING_ANALYSIS.md  SRS_SYSTEM.md
examples/: srs_demo.rs  test_enhanced_scoring.rs  test_srs_integration.rs
src/: debug_drop_timing.rs  lib.rs  main.rs  main_simple.rs
src/audio/: mod.rs  system.rs
src/board/: board.rs  mod.rs  renderer.rs
src/game/: config.rs  mod.rs  movement_tests.rs  state.rs
src/graphics/: colors.rs  mod.rs  utils.rs
src/input/: handler.rs  mod.rs
src/leaderboard/: mod.rs
src/menu/: mod.rs
src/rotation/: integration_tests.rs  kick_tables.rs  mod.rs  srs.rs
src/scoring/: mod.rs  perfect_clear.rs
src/tetromino/: data.rs  mod.rs  types.rs
