[package]
name = "rust-tetris"
version = "0.1.0"
edition = "2021"
authors = ["tjonestj3"]
description = "A high-performance Tetris implementation in Rust"
keywords = ["tetris", "game", "2d"]
categories = ["games"]

[dependencies]
# Graphics and rendering
macroquad = { version = "0.4", features = ["audio"] }

# Serialization for save data and settings
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random number generation for piece spawning
rand = "0.8"

# Configuration management
config = "0.13"

# Logging
log = "0.4"
env_logger = "0.10"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }
